# wdt

./: CMakeLists.txt  Protocol.cpp  Reporting.cpp  Reporting.h
benchmarks/: random-data-lan-commands-2026-04-26.md  random-data-lan-results-2026-04-26.md
folly/: Conv.h  Memory.h  Optional.h  Range.h  ScopeGuard.h  SpinLock.h  String.h  ThreadLocal.h
folly/hash/: Checksum.h
folly/lang/: Bits.h
folly/synchronization/: RWSpinLock.h
util/: Stats.h  TransferLogManager.cpp
